# space_editor

./: .gitignore  Cargo.toml  README.md  index.html
assets/default_terrain/: terrain_config.ron
assets/models/: rpg_dagger_03.glb
assets/models/doodads/: Hilly_Prop_Tree_Oak_1.glb  barrel_water_1.glb  bench_wood.glb  birch_dead_1.glb  birch_dead_2.glb  birch_dead_3.glb  birch_green.glb  birch_green2.glb  birch_green3.glb  bonfire.glb  brazier_1.glb  bridge_wood.glb  cart_1.glb  chair_orc.glb  church_1.glb  elf_rock_tree.glb  elf_sculpture_dream_catcher.glb  elf_sculpture_gem.glb  elf_sculpture_goddess.glb  elf_sculpture_orb.glb  elf_sculpture_rock.glb  elf_sculpture_rock2.glb  elf_sculpture_rune.glb  elf_sculpture_rune_totem.glb  elf_sculpture_sphere.glb  elf_stump_1.glb  elf_well.glb  farm_well.glb  fence_1.glb  fence_2.glb  fence_4.glb  fence_stone.glb  fire_wood_1.glb  fountain_orc.glb  hayloft.glb  house_1.glb  house_2.glb  house_3.glb  house_4.glb  house_5.glb  (+93 more)
assets/scenes/: Scene0.scn.ron  spirit_scene_1.scn.ron
assets/terrain/default_terrain/: terrain_config.ron
crates/editor_bevy_ui/: Cargo.toml
crates/editor_bevy_ui/src/: dock.rs  lib.rs
crates/editor_bevy_ui/src/panels/: mod.rs
crates/editor_core/src/: gltf_unpack.rs  selected.rs
crates/editor_ui/src/: lib.rs  selection.rs  ui_plugin.rs
crates/remote_protocol/: Cargo.toml
examples/: bevy_ui.rs  minamal_gltf_test.rs
modules/bevy_mesh_terrain_plugin/src/: terrain_tab.rs
modules/terrain_gen/: Cargo.toml
modules/terrain_gen/src/: lib.rs
src/: lib.rs  main.rs
(+4 files in other folders)
